integrated customrscript with dataview

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -31,7 +31,7 @@
 	 			<button type="button" class="btn btn-default calculation btn-home-plus" href="step-edit.html">
  					<i class="icon-plus-sign-alt icon-5" style="font-size:3em"></i>
  				</button>
- 				<button type="button" class="btn btn-default btn-home">Tree height</button>
+ 				<button type="button" class="btn btn-default btn-home" id="calculation-button" style="display: none"></button>
 	  		</div>
 <!-- 	  		<div class="row row3"></div> -->
   		</div>
@@ -161,9 +161,13 @@
 	<script src="./js/modal.js"></script>
 	<script src="./js/tooltip.js"></script>
 	
+	<!-- Url parser jqeury plugin -->
+	<script src="./js/purl.js"></script>
+	
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc.js"></script>
 	<script src="./js/calc-form.js"></script>
+	
 		
 </body>
 </html>
