--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -24,6 +24,12 @@
   </head>
 
 <body>
+	
+	<div id="messageContainer" class="col-md-4 col-md-offset-4 alert alert-dismissable">
+		<button type='button' class='close' data-dismiss='alert'>×</button>
+		<span></span>
+	</div>
+					
  	<div class="section-home calculation" id="calculation">
  		<div class="page-section">
 	  		<div class="row row1"></div>
