fiexed response name in step-edit

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -196,7 +196,7 @@ $(function(){
 		    },
 		    success: function ( response ) {
 		    	CalcForm.updateErrors($stepForm, response.errors);
-		    	if(status.status == "ERROR" ) {
+		    	if(response.status == "ERROR" ) {
 		    		CalcForm.showResultMessage("Error, invalid data",false);
 		    	} else {
 		    		CalcForm.showResultMessage("Success, the data was processed correctly",true);
