--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -25,7 +25,7 @@
 
 <body>
 	
-	<div id="messageContainer" class="col-md-4 col-md-offset-4 alert alert-dismissable">
+	<div id="messageContainer" class="col-md-4 col-md-offset-4 alert alert-dismissable" style="display: none;">
 		<button type='button' class='close' data-dismiss='alert'>×</button>
 		<span></span>
 	</div>
