Fixed new variable form validation messages

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -30,7 +30,7 @@
 							<select class="form-control" name="variableId" disabled="disabled"></select>
 						</div>
 <!-- 						<div class="no-padding col-md-1"> -->
-							<button name="add-variable" class="calculation btn btn-info col-md-1">
+							<button name="add-variable" class="calculation btn btn-info col-md-1" disabled="disabled">
 								<i class="icon-plus-sign-alt"></i>
 							</button>
 <!-- 						</div> -->
