CALC-189 - In step-edit.html the output variables select must be populated only with quantitative variables associated to the selected entity

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -226,7 +226,7 @@ $(function(){
 		$selectedEntity = $entitySelect.find(":selected");
 		if ( $selectedEntity != null ) {
 			$.ajax({
-				url: "rest/workspace/entities/" + $selectedEntity.val() + "/variables.json",
+				url: "rest/workspace/entities/" + $selectedEntity.val() + "/qtyvariables.json",
 				dataType: "json"
 			})
 			.done(function(response) {				
