--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -64,13 +64,16 @@
 	  	</div>
 	  	
 	  	<div class="section-home settings" id="settings">
-  		<div class="page-section">
-	  		<div class="row row1"></div>
-	 		<div class="row row2">
+	  		<div class="page-section">
+		  		<div class="row row1"></div>
+		 		<div class="row row2">
+		  		</div>
+		  		<div class="row row3"></div>
 	  		</div>
-	  		<div class="row row3"></div>
-  		</div>
-  	</div>
+	  	</div>
+	  	
+	  	<div class="section-home settings" id="footer-placemark">
+	  	</div>
 	</div>
   	
 	<!--  ==== End container ==== -->
@@ -107,7 +110,7 @@
 	
 	
 	<!--  ==== Footer ==== -->
-	<footer id="footer" style="top:">
+	<footer id="footer">
 		<div class="row">
 			<div class="col-md-2">
 				<button type="button" class="btn back" href="#settings">
