--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -1,7 +1,7 @@
 <!-- ==== Html here === -->
 <div class="page-section">
 	<!-- edit form -->
-	<div class="row" id="calculation-step-edit-container" style="width: 100%; height: 100%; overflow: auto; left:0">
+	<div class="row" id="calculation-step-edit-container" style="width: 100%; height: 100%; left:0">
 		<div class="col-md-2">
 		</div>
 		<div class="col-md-8">
@@ -104,7 +104,7 @@
 	</div>
 	
 	<!-- Execution and results  -->
-	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 100%; overflow: auto;">
+	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 100%; ">
 		<!-- progress bar -->
 		<div class="row">
 			<div class="col-md-2">
