CALC-191 - Rename calc-form.js to calc-ui.js (and class UI)

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -150,7 +150,7 @@
 	
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc.js"></script>
-	<script src="./js/calc-form.js"></script>
+	<script src="./js/calc-ui.js"></script>
 	
 		
 </body>
