--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -259,12 +259,12 @@ $(function(){
 		$stepForm.ajaxForm( {
 		    dataType : 'json',
 		    beforeSubmit: function() {
-		    	UI.disableForm( $stepForm );
+		    	UI.Form.disable( $stepForm );
 		    },
 		    success: function ( response ) {
-		    	UI.updateErrors($stepForm, response.errors);
+		    	UI.Form.updateErrors($stepForm, response.errors);
 		    	if(response.status == "ERROR" ) {
-		    		UI.showResultMessage("There are errors in the form. Please fix them before proceeding.",false);
+		    		UI.Form.showResultMessage("There are errors in the form. Please fix them before proceeding.",false);
 		    	} else {
 		    		$calculationStep = response.fields.calculationStep;
 		    		updateCalculationStepUi($calculationStep);
@@ -273,11 +273,11 @@ $(function(){
 			    		succesCallback(response)
 		    		};
 		    	}
-		    	UI.enableForm( $stepForm );
+		    	UI.Form.enable( $stepForm );
 		    },
 		    error: function (e) {
-		    	UI.showResultMessage("An error occured. Please check the log file.",false );
-		    	UI.enableForm( $stepForm );
+		    	UI.Form.showResultMessage("An error occured. Please check the log file.",false );
+		    	UI.Form.enable( $stepForm );
 		    }
 		});	
 		
@@ -288,7 +288,7 @@ $(function(){
 	$stepForm.find("button[type='submit']").click(function(event){
 		event.preventDefault();
 		saveStep(function(){
-			UI.showResultMessage("Calculation step successfully saved.",true);
+			UI.Form.showResultMessage("Calculation step successfully saved.",true);
 		});
 	});
 	
@@ -299,7 +299,7 @@ $(function(){
 	$addVariableButton.click(function(event){
 		event.preventDefault();
 		
-		UI.reset($addVariableForm);
+		UI.Form.reset($addVariableForm);
 		
 		//set entityId hidden field value
 		$addVariableForm.find("[name=entityId]").val($entitySelect.val());
@@ -314,13 +314,13 @@ $(function(){
 	    	entityId: $entitySelect.val()
 	    },
 	    beforeSubmit: function() {
-	    	UI.disableForm( $addVariableForm );
+	    	UI.Form.disable( $addVariableForm );
 	    },
 	    success: function ( response ) {
-	    	UI.enableForm( $addVariableForm );
-	    	UI.updateErrors($addVariableForm, response.errors);
+	    	UI.Form.enable( $addVariableForm );
+	    	UI.Form.updateErrors($addVariableForm, response.errors);
 	    	if(response.status == "ERROR" ) {
-	    		UI.showResultMessage("Error, invalid data",false);
+	    		UI.Form.showResultMessage("Error, invalid data",false);
 	    	} else {
 	    		var variable = response.fields.variable;
 	    		loadVariables(function() {
@@ -331,8 +331,8 @@ $(function(){
 	    	}
 	    },
 	    error: function (e) {
-	    	UI.showResultMessage("An error occured. Please check the log file.",false );
-	    	UI.enableForm( $addVariableForm );
+	    	UI.Form.showResultMessage("An error occured. Please check the log file.",false );
+	    	UI.Form.enable( $addVariableForm );
 	    }
 	});
 	
@@ -406,7 +406,7 @@ $(function(){
 		loadVariables(function() {
 			$variableSelect.val($step.outputVariableId);
 			
-			UI.setFieldValues($stepForm, $step);
+			UI.Form.setFieldValues($stepForm, $step);
 		});
 	};
 	
