adjusted document font size

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -104,7 +104,15 @@
 	</div>
 	
 	<!-- Execution and results  -->
-	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 100%; ">
+	<div class="row" id="calculation-step-exec-container" style="width: 100%; height: 100%; padding-top:10px; ">
+		<div class="row">
+			<div class="col-md-2 col-md-offset-5 step-name">
+				<legend>Name</legend>
+			</div>
+			<div class="col-md-1">
+			
+			</div>
+		</div>
 		<!-- progress bar -->
 		<div class="row">
 			<div class="col-md-2">
@@ -118,7 +126,7 @@
 							<div class="progress-bar"></div>
 						</div>
 			   		</div> 
-			   		<div class="col-md-1 percent" style="font-size: 0.3em">
+			   		<div class="col-md-1 percent">
 			   		</div>
 				</div>
 			</div>
