CALC-192 - Create method UI.lock

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -108,6 +108,15 @@
 	</div>
 	<!-- ==== End Job Status modal section ==== -->
 	
+	<!-- ==== UI lock modal section ==== -->
+	<div id="ui-lock-modal" class="modal fade">
+		<div class="modal-dialog">
+			<div class="progress progress-striped active"> 
+				<div class="progress-bar progress-bar-info" style="width: 100%"></div>
+			</div>
+		</div>
+	</div>
+	<!-- ==== End UI lock modal section ==== -->
 	
 	<!--  ==== Footer ==== -->
 	<footer id="footer">
