Create CalculationStepManager and move CalculationStep ajax calls to that class

--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -160,6 +160,7 @@
 	<!-- ==== Custom javascript -->
 	<script src="./js/calc.js"></script>
 	<script src="./js/calc-ui.js"></script>
+	<script src="./js/calculation-step-manager.js"></script>
 	
 		
 </body>
