--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -44,20 +44,20 @@
 	  		</div>
 	 	</div>
 	 	
-	  	<div class="section-home results" id="results">
-	  		<div class="page-section">
-		  		<div class="row row1"></div>
-		 		<div class="row row2">
-		  		</div>
-		  		<div class="row row3"></div>
-	  		</div>
-	  	</div>
+	 		<!-- Result section didsabled for now -->
+<!-- 	  	<div class="section-home results" id="results"> -->
+<!-- 	  		<div class="page-section"> -->
+<!-- 		  		<div class="row row1"></div> -->
+<!-- 		 		<div class="row row2"> -->
+<!-- 		  		</div> -->
+<!-- 		  		<div class="row row3"></div> -->
+<!-- 	  		</div> -->
+<!-- 	  	</div> -->
 	  	
 	  	<div class="section-home data" id="data">
 	  		<div class="page-section">
 		  		<div class="row row1"></div>
 		 		<div class="row row2">
-		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect Import</button>
 		  		</div>
 		  		<div class="row row3"></div>
 	  		</div>
@@ -67,6 +67,7 @@
 	  		<div class="page-section">
 		  		<div class="row row1"></div>
 		 		<div class="row row2">
+		 			<button type="button" class="btn btn-default btn-home" href="collect-sync.html">Collect Import</button>
 		  		</div>
 		  		<div class="row row3"></div>
 	  		</div>
@@ -129,7 +130,8 @@
 			<div class="col-md-8" >
 				<div class="links">
 					<button type="button" class="calculation btn btn-default" href="#calculation">Calculation</button>
-					<button type="button" class="results btn btn-default" href="#results">Results</button>
+					<!-- Result section didsabled for now -->
+<!-- 					<button type="button" class="results btn btn-default" href="#results">Results</button> -->
 					<button type="button" class="data btn btn-default" href="#data">Data</button>
 					<button type="button" class="settings btn btn-default" href="#settings">Settings</button>
 				</div>
