--- a/calc-webapp/src/main/webapp/index.html
+++ b/calc-webapp/src/main/webapp/index.html
@@ -73,7 +73,7 @@
 	  		</div>
 	  	</div>
 	  	
-	  	<div class="section-home settings" id="footer-placemark">
+	  	<div class="footer-placeholder">
 	  	</div>
 	</div>
   	
@@ -123,7 +123,7 @@
 	<footer id="footer">
 		<div class="row">
 			<div class="col-md-2">
-				<button type="button" class="btn back" href="#settings">
+				<button type="button" class="btn default-btn back" href="#settings">
 				<i class="icon-caret-left icon-5"></i>
 				</button>
 			</div>
