Update home page when adding or changing calculation steps

--- a/calc-webapp/src/main/webapp/step-edit.html
+++ b/calc-webapp/src/main/webapp/step-edit.html
@@ -312,6 +312,8 @@ $(function(){
 		    		$calculationStep = response.fields.calculationStep;
 		    		updateCalculationStepUi($calculationStep);
 			    	
+		    		CalculationStepManager.updateHomePageStepElement($calculationStep);
+			    	
 		    		if(succesCallback) {
 			    		succesCallback(response)
 		    		};
